<resources>
    <string name="app_name">JobApplication</string>
    <string name="default_web_client_id" translatable="false">YOUR_WEB_CLIENT_ID</string>
    <string name="phnNo_str">\u0020\u0020\u0020\u0020\u0020 +91 1234567890</string>
    <string name="email_str">\u0020\u0020\u0020\u0020\u0020 Vikaslohar@gmail.com</string>
    <string name="location_str">\u0020\u0020\u0020\u0020\u0020 Pali,Rajasthan India</string>
    <string name="aboutMe_str">Vikas Lohar is a result-driven Android Developer with a passion for leveraging innovative strategies to drive brand growth and customer engagement in the ever-evolving digital landscape.\n\nFeel free to reach me out for any specific queries.\n\n</string>
    <string name="contact_here_card">Contact Here</string>
    <string name="personal_info_btn_str">Personal Info</string>
    <string name="profileName">Vikas Lohar</string>
    <string name="experience_btn_str">Experience</string>
    <string name="about_me_card">About Me</string>
    <string name="experience_card">Experience</string>
    <string name="top_skills_card">Top Skills</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="webDeveloperDesc">We are seeking a skilled Web Developer to design, code, and modify websites according to client specifications. Responsibilities include developing user-facing features, collaborating with team members on UI/UX designs, writing clean and maintainable code, optimizing applications for speed and scalability, testing for reliability, and staying updated on emerging technologies. The ideal candidate will have proficiency in HTML, CSS, JavaScript, and server-side languages, along with strong problem-solving and communication skills. A Bachelor\'s degree in Computer Science or related field and proven work experience as a web developer are required.</string>

    <string name="webReqDesc">
        • Bachelor’s degree in Computer Science.\n
       • Proven work experience as a web developer.\n
       • Strong skills in HTML, CSS, and JavaScript.\n
       • Strong problem-solving skills and attention to detail. \n
       • Excellent communication and collaboration abilities.\n
       • Creativity and ability to propose innovative solutions.\n
       • Knowledge of database technology \n
       • Proficiency in version control systems such as Git.

    </string>
    <string name="bullet_points"><![CDATA[<ul><li>First bullet point</li><li>Second bullet point</li></ul>]]></string>

</resources>